--- a/bycuisine.html
+++ b/bycuisine.html
@@ -73,52 +73,48 @@
         <li>
             <h2>Italian</h2>
             <ul>
-                <li>
+                <li class="bright-color">
                     <h3>Eulji-Darak Gangnam</h3>
-                    <div class="restaurant">
-                        <ul>
-                            <li>Cuisine: Italian, Fusion</li>
-                            <li>Pricing: 14,000 ~ 20,000 WON</li>
-                            <li>Districts: Gangnam</li>
-                            <li>Location: 10 min walk from Gangnam St. Exit 11</li>
-                            <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
-                            <li><cite class="source"><a href="https://naver.me/xtWHF1x9">Restaurant Info</a></cite></li>
-                            <!--Source: https://naver.me/xtWHF1x9-->
-                        </ul>
-                        <br>
-                        <picture class="food">
-                            <img src="/images/omurice.jpg" alt="omurice">
-                        </picture><br>
-                    </div>
+                    <ul>
+                        <li>Cuisine: Italian, Fusion</li>
+                        <li>Pricing: 14,000 ~ 20,000 WON</li>
+                        <li>Districts: Gangnam</li>
+                        <li>Location: 10 min walk from Gangnam St. Exit 11</li>
+                        <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
+                        <li><cite class="source"><a href="https://naver.me/xtWHF1x9">Restaurant Info</a></cite></li>
+                        <!--Source: https://naver.me/xtWHF1x9-->
+                    </ul>
+                    <br>
+                    <picture class="food">
+                        <img src="/images/omurice.jpg" alt="omurice">
+                    </picture><br>
                     <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
                     <cite class="source"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
-                <li>
+                <li class="darker-color">
                     <h3>Witch's Kitchen</h3>
-                    <div class="restaurant">
-                        <ul>
-                            <li>Cuisine: Italian, Fusion</li>
-                            <li>Pricing: 14,000 ~ 19,000 WON</li>
-                            <li>Districts: Gangnam</li>
-                            <li>Location: 10 min walk from Gangnam St. Exit 11</li>
-                            <li>Signature Menu: Kimchi Fried Rice, Carbonara Pasta</li>
-                            <li>
-                                <!--Source: https://naver.me/xYQTUQY4-->
-                                <cite class="source"><a href="https://naver.me/xYQTUQY4">Restaurant Info</a></cite>
-                            </li>
-                        </ul>
+                    <ul>
+                        <li>Cuisine: Italian, Fusion</li>
+                        <li>Pricing: 14,000 ~ 19,000 WON</li>
+                        <li>Districts: Gangnam</li>
+                        <li>Location: 10 min walk from Gangnam St. Exit 11</li>
+                        <li>Signature Menu: Kimchi Fried Rice, Carbonara Pasta</li>
+                        <li>
+                            <!--Source: https://naver.me/xYQTUQY4-->
+                            <cite class="source"><a href="https://naver.me/xYQTUQY4">Restaurant Info</a></cite>
+                        </li>
+                    </ul>
 
-                        <br>
-                        <picture class="food">
-                            <img src="images/kimchifriedrice.jpg" alt="kimchifriedrice">
-                        </picture><br>
-                    </div>
+                    <br>
+                    <picture class="food">
+                        <img src="images/kimchifriedrice.jpg" alt="kimchifriedrice">
+                    </picture><br>
                     <!--Source: https://m.blog.naver.com/zkxmqkek/222385243560-->
                     <cite class="source"> <a href="https://m.blog.naver.com/zkxmqkek/222385243560">kimchi fried rice</a></cite>
                 </li>
 
-                <li>
+                <li class="sweet-color">
                     <h3>Nilli</h3>
                     <ul>
                         <li>Cuisine: Italian</li>
@@ -137,7 +133,7 @@
                     <cite class="source"> <a href="https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG">vongole</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Eulji-Darak Dosan</h3>
                     <ul>
                         <li>Cuisine: Italian, Fusion</li>
@@ -161,7 +157,7 @@
         <li>
             <h2>Korean</h2>
             <ul>
-                <li>
+                <li class="darker-color">
                     <h3>Song-ok Sinsa</h3>
                     <ul>
                         <li>Cuisine: Japanese, Korean</li>
@@ -179,7 +175,7 @@
                     <cite class="source"> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
 
-                <li>
+                <li class="bright-color">
                     <h3>Jangin Dakgalbi</h3>
                     <ul>
                         <li>Cuisine: Korean</li>
@@ -198,7 +194,7 @@
                     <cite class="source"> <a href="https://www.siksinhot.com/P/375109">dakgalbi</a></cite>
                 </li>
 
-                <li>
+                <li class="sweet-color">
                     <h3>Daechi Hamheung Nangmyeon</h3>
                     <ul>
                         <li>Cuisine: Korean</li>
@@ -217,7 +213,7 @@
                     <cite class="source"> <a href="https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html">cold noodles</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Song-ok Apgujeong Rodeo</h3>
                     <ul>
                         <li>Cuisine: Japanese, Korean</li>
@@ -241,7 +237,7 @@
         <li>
             <h2>Japanese</h2>
             <ul>
-                <li>
+                <li class="darker-color">
                     <h3>Dotonbori</h3>
                     <ul>
                         <li>Cuisine: Japanese</li>
@@ -260,7 +256,7 @@
                     <cite class="source"> <a href="https://blog.naver.com/postman6666/221132720385">sashimi</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Oreno Ramen</h3>
                     <ul>
                         <li>Cuisine: Japanese</li>
@@ -279,7 +275,7 @@
                     <cite class="source"> <a href="https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html">ramen</a></cite>
                 </li>
 
-                <li>
+                <li class="sweet-color">
                     <h3>Song-ok Apgujeong Rodeo</h3>
                     <ul>
                         <li>Cuisine: Japanese, Korean</li>
@@ -298,7 +294,7 @@
                     <cite class="source"><a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
 
-                <li>
+                <li class="bright-color">
                     <h3>Song-ok Sinsa</h3>
                     <ul>
                         <li>Cuisine: Japanese, Korean</li>
@@ -322,7 +318,7 @@
         <li>
             <h2>Chinese</h2>
             <ul>
-                <li>
+                <li class="sweet-color">
                     <h3>Hong Kong Banjeom</h3>
                     <ul>
                         <li>Cuisine: Chinese</li>
@@ -341,7 +337,7 @@
                     <cite class="source"> <a href="https://amkorinstory.com/1101">jjampong</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Haibo</h3>
                     <ul>
                         <li>Cuisine: Chinese</li>
@@ -365,7 +361,7 @@
         <li>
             <h2>Fusion</h2>
             <ul>
-                <li>
+                <li class="bright-color">
                     <h3>Eulji-Darak Dosan</h3>
                     <ul>
                         <li>Cuisine: Italian, Fusion</li>
@@ -384,7 +380,7 @@
                     <cite class="source"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
-                <li>
+                <li class="darker-color">
                     <h3>Eulji-Darak Gangnam</h3>
                     <ul>
                         <li>Cuisine: Italian, Fusion</li>
@@ -403,7 +399,7 @@
                     <cite class="source"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Witch's Kitchen</h3>
                     <ul>
                         <li>Cuisine: Italian, Fusion</li>
@@ -422,7 +418,7 @@
                     <cite class="source"> <a href="https://m.blog.naver.com/zkxmqkek/222385243560">kimchi fried rice</a></cite>
                 </li>
 
-                <li>
+                <li class="sweet-color">
                     <h3>Gamsung Taco</h3>
                     <ul>
                         <li>Cuisine: Fusion</li>
@@ -441,7 +437,7 @@
                     <cite class="source"> <a href="https://chordq0539.tistory.com/738">tacos</a></cite>
                 </li>
 
-                <li>
+                <li class="bright-color">
                     <h3>Fukuoka Hambageu</h3>
                     <ul>
                         <li>Cuisine: Fusion</li>
