--- a/bydistrict.html
+++ b/bydistrict.html
@@ -73,7 +73,7 @@
         <li>
             <h2>Gangnam</h2>
             <ul>
-                <li>
+                <li class="bright-color">
                     <h3>Eulji-Darak Gangnam</h3>
                     <ul>
                         <li>Cuisine: Italian, Fusion</li>
@@ -81,18 +81,18 @@
                         <li>Districts: Gangnam</li>
                         <li>Location: 10 min walk from Gangnam St. Exit 11</li>
                         <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
+                        <li><cite class="source"><a href="https://naver.me/xtWHF1x9">Restaurant Info</a></cite></li>
+                        <!--Source: https://naver.me/xtWHF1x9-->
                     </ul>
-                    <!--Source: https://naver.me/xtWHF1x9-->
-                    Source: <cite ><a href="https://naver.me/xtWHF1x9">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/omurice.jpg" alt="omurice">
                     </picture><br>
                     <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
-                    Source: <cite class="pic-cite"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
+                    <cite class="source"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
-                <li>
+                <li class="darker-color">
                     <h3>Jangin Dakgalbi</h3>
                     <ul>
                         <li>Cuisine: Korean</li>
@@ -102,16 +102,16 @@
                         <li>Signature Menu: Dakgalbi (roasted chicken) with cheese toppings and ramen noodles</li>
                     </ul>
                     <!--Source: https://naver.me/GbEcUj4Q-->
-                    Source: <cite><a href="https://naver.me/GbEcUj4Q">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/GbEcUj4Q">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/dakgalbi.jpg" alt="dakgalbi">
                     </picture><br>
                     <!--Source: https://www.siksinhot.com/P/375109-->
-                    Source: <cite class="pic-cite"> <a href="https://www.siksinhot.com/P/375109">dakgalbi</a></cite>
+                    <cite class="source"> <a href="https://www.siksinhot.com/P/375109">dakgalbi</a></cite>
                 </li>
 
-                <li>
+                <li class="sweet-color">
                     <h3>Witch's Kitchen</h3>
                     <ul>
                         <li>Cuisine: Italian, Fusion</li>
@@ -119,15 +119,18 @@
                         <li>Districts: Gangnam</li>
                         <li>Location: 10 min walk from Gangnam St. Exit 11</li>
                         <li>Signature Menu: Kimchi Fried Rice, Carbonara Pasta</li>
+                        <li>
+                            <!--Source: https://naver.me/xYQTUQY4-->
+                            <cite class="source"><a href="https://naver.me/xYQTUQY4">Restaurant Info</a></cite>
+                        </li>
                     </ul>
-                    <!--Source: https://naver.me/xYQTUQY4-->
-                    Source: <cite><a href="https://naver.me/xYQTUQY4">Restaurant Info</a></cite>
+
                     <br>
-                    <picture>
-                        <img src="/images/kimchifriedrice.jpg" alt="kimchifriedrice">
+                    <picture class="food">
+                        <img src="images/kimchifriedrice.jpg" alt="kimchifriedrice">
                     </picture><br>
                     <!--Source: https://m.blog.naver.com/zkxmqkek/222385243560-->
-                    Source: <cite class="pic-cite"> <a href="https://m.blog.naver.com/zkxmqkek/222385243560">kimchi fried rice</a></cite>
+                    <cite class="source"> <a href="https://m.blog.naver.com/zkxmqkek/222385243560">kimchi fried rice</a></cite>
                 </li>
             </ul>
         </li>
@@ -135,7 +138,7 @@
         <li>
             <h2>Sinsa</h2>
             <ul>
-                <li>
+                <li class="darker-color">
                     <h3>Song-ok Sinsa</h3>
                     <ul>
                         <li>Cuisine: Japanese, Korean</li>
@@ -145,15 +148,15 @@
                         <li>Signature Menu: Hot Pot Udon, Cold Soba Noodles</li>
                     </ul>
                     <!--Source: https://naver.me/FFvSeY1s-->
-                    Source: <cite><a href="https://naver.me/FFvSeY1s">Restaurant Info</a></cite><br>
-                    <picture>
+                    <cite class="source"><a href="https://naver.me/FFvSeY1s">Restaurant Info</a></cite><br>
+                    <picture class="food">
                         <img src="/images/hotpotudon.jpg" alt="udon">
                     </picture><br>
                     <!--Source: https://m.blog.naver.com/dongni660/222616764808-->
-                    Source: <cite class="pic-cite"> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
+                    <cite class="source"> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Gamsung Taco</h3>
                     <ul>
                         <li>Cuisine: Fusion</li>
@@ -163,16 +166,16 @@
                         <li>Signature Menu: Chicken and Beef Tacos, Shrimp with Fajitas</li>
                     </ul>
                     <!--Source: https://naver.me/5iz06ZOI-->
-                    Source: <cite><a href="https://naver.me/5iz06ZOI">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/5iz06ZOI">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/gamsungtaco.jpg" alt="tacos">
                     </picture><br>
                     <!--Source: https://chordq0539.tistory.com/738-->
-                    Source: <cite class="pic-cite"> <a href="https://chordq0539.tistory.com/738">tacos</a></cite>
+                    <cite class="source"> <a href="https://chordq0539.tistory.com/738">tacos</a></cite>
                 </li>
 
-                <li>
+                <li class="sweet-color">
                     <h3>Hong Kong Banjeom</h3>
                     <ul>
                         <li>Cuisine: Chinese</li>
@@ -182,13 +185,13 @@
                         <li>Signature Menu: Jjajang Noodles, Jjampong Noodles</li>
                     </ul>
                     <!--Source: https://naver.me/FLBKLf8O-->
-                    Source: <cite><a href="https://naver.me/FLBKLf8O">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/FLBKLf8O">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/jjampong.jpg" alt="jjampong">
                     </picture><br>
                     <!--Source: https://amkorinstory.com/1101-->
-                    Source: <cite class="pic-cite"> <a href="https://amkorinstory.com/1101">jjampong</a></cite>
+                    <cite class="source"> <a href="https://amkorinstory.com/1101">jjampong</a></cite>
                 </li>
             </ul>
         </li>
@@ -196,7 +199,7 @@
         <li>
             <h2>Jamsil</h2>
             <ul>
-                <li>
+                <li class="bright-color">
                     <h3>Dotonbori</h3>
                     <ul>
                         <li>Cuisine: Japanese</li>
@@ -206,16 +209,16 @@
                         <li>Signature Menu: Sashimi Set, Hot Fish Cake Soup, Earlgrey Cocktail</li>
                     </ul>
                     <!--Source: https://naver.me/5OnGgyCU-->
-                    Source: <cite><a href="https://naver.me/5OnGgyCU">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/5OnGgyCU">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/sashimi.jpg" alt="sashimi">
                     </picture><br>
                     <!--Source: https://blog.naver.com/postman6666/221132720385-->
-                    Source: <cite class="pic-cite"> <a href="https://blog.naver.com/postman6666/221132720385">sashimi</a></cite>
+                    <cite class="source"> <a href="https://blog.naver.com/postman6666/221132720385">sashimi</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Oreno Ramen</h3>
                     <ul>
                         <li>Cuisine: Japanese</li>
@@ -225,13 +228,13 @@
                         <li>Signature Menu: Oreno Basic Ramen</li>
                     </ul>
                     <!--Source: https://naver.me/GTgSWW6m-->
-                    Source: <cite><a href="https://naver.me/GTgSWW6m">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/GTgSWW6m">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/oreno.jpg" alt="oreno ramen">
                     </picture><br>
                     <!--Source: https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html-->
-                    Source: <cite class="pic-cite"> <a href="https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html">ramen</a></cite>
+                    <cite class="source"> <a href="https://www.tripadvisor.com/Restaurant_Review-g294197-d26232658-Reviews-Oreno_Ramen_Gangnam-Seoul.html">ramen</a></cite>
                 </li>
             </ul>
         </li>
@@ -239,7 +242,7 @@
         <li>
             <h2>Daechi</h2>
             <ul>
-                <li>
+                <li class="sweet-color">
                     <h3>Fukuoka Hambageu</h3>
                     <ul>
                         <li>Cuisine: Fusion</li>
@@ -249,16 +252,16 @@
                         <li>Signature Menu: Egg Cheese Garlic Hambageu (minced beef steak)</li>
                     </ul>
                     <!--Source: https://naver.me/FXZKJkPw-->
-                    Source: <cite><a href="https://naver.me/FXZKJkPw">Restaurant Info</a></cite>
+                    <cite class="source"> <a href="https://naver.me/FXZKJkPw">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/fukuoka.jpg" alt="hambageu">
                     </picture><br>
                     <!--Source: http://m.menupan.com/restaurant/onepage.asp?acode=J104085-->
-                    Source: <cite class="pic-cite"> <a href="http://m.menupan.com/restaurant/onepage.asp?acode=J104085">hambageu</a></cite>
+                    <cite class="source"> <a href="http://m.menupan.com/restaurant/onepage.asp?acode=J104085">hambageu</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Haibo</h3>
                     <ul>
                         <li>Cuisine: Chinese</li>
@@ -268,16 +271,16 @@
                         <li>Signature Menu: Jjajang Noodles, Jjampong Noodles</li>
                     </ul>
                     <!--Source: https://naver.me/Gulz9ueB-->
-                    Source: <cite><a href="https://naver.me/Gulz9ueB">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/Gulz9ueB">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/jjajang.jpg" alt="jjajang">
                     </picture><br>
                     <!--Source: https://emmaru.com/matzip/matzip.do?code=M171210131410346771N-->
-                    Source: <cite class="pic-cite"> <a href="https://emmaru.com/matzip/matzip.do?code=M171210131410346771N">jjajang</a></cite>
+                    <cite class="source"><a href="https://emmaru.com/matzip/matzip.do?code=M171210131410346771N">jjajang</a></cite>
                 </li>
 
-                <li>
+                <li class="bright-color">
                     <h3>Nilli</h3>
                     <ul>
                         <li>Cuisine: Italian</li>
@@ -287,16 +290,16 @@
                         <li>Signature Menu: Vongolé Pasta, Pesce</li>
                     </ul>
                     <!--Source: https://naver.me/x0ahUbvV-->
-                    Source: <cite><a href="https://naver.me/x0ahUbvV">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/x0ahUbvV">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/nilli-vongole.jpg" alt="vongole">
                     </picture><br>
                     <!--Source: https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG-->
-                    Source: <cite class="pic-cite"> <a href="https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG">vongole</a></cite>
+                    <cite class="source"> <a href="https://sg.trip.com/moments/detail/suwon-14747-16246036?locale=en-SG">vongole</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Daechi Hamheung Nangmyeon</h3>
                     <ul>
                         <li>Cuisine: Korean</li>
@@ -306,13 +309,13 @@
                         <li>Signature Menu: Cold Noodles, Spicy Cold Noodles</li>
                     </ul>
                     <!--Source: https://naver.me/xzc9nEIp-->
-                    Source: <cite><a href="https://naver.me/xzc9nEIp">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/xzc9nEIp">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/spicycoldnoodles.jpg" alt="spicy cold noodles">
                     </picture><br>
                     <!--Source: https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html-->
-                    Source: <cite class="pic-cite"> <a href="https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html">cold noodles</a></cite>
+                    <cite class="source"> <a href="https://www.123rf.com/photo_106378483_korean-food-collection-photo_spicy-buckwheat-noodles-spicy-cold-noodle-in-stainless-steel-bowl-top-v.html">cold noodles</a></cite>
                 </li>
             </ul>
         </li>
@@ -320,7 +323,7 @@
         <li>
             <h2>Apgujeong Rodeo</h2>
             <ul>
-                <li>
+                <li class="darker-color">
                     <h3>Eulji-Darak Dosan</h3>
                     <ul>
                         <li>Cuisine: Italian, Fusion</li>
@@ -330,16 +333,16 @@
                         <li>Signature Menu: Darak Omurice, Spicy Seafood Rosé Pasta</li>
                     </ul>
                     <!--Source: https://naver.me/5h3E7Kat-->
-                    Source: <cite><a href="https://naver.me/5h3E7Kat">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/5h3E7Kat">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/omurice.jpg" alt="omurice">
                     </picture><br>
                     <!--Source: https://www.esquirekorea.co.kr/eee/hotplace/place/1528-->
-                    Source: <cite class="pic-cite"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
+                    <cite class="source"> <a href="https://www.esquirekorea.co.kr/eee/hotplace/place/1528">omurice</a></cite>
                 </li>
 
-                <li>
+                <li class="cool-color">
                     <h3>Song-ok Apgujeong Rodeo</h3>
                     <ul>
                         <li>Cuisine: Japanese, Korean</li>
@@ -349,13 +352,13 @@
                         <li>Signature Menu: Hot Pot Udon, Cold Soba Noodles</li>
                     </ul>
                     <!--Source: https://naver.me/G3J8vtTl-->
-                    Source: <cite><a href="https://naver.me/G3J8vtTl">Restaurant Info</a></cite>
+                    <cite class="source"><a href="https://naver.me/G3J8vtTl">Restaurant Info</a></cite>
                     <br>
-                    <picture>
+                    <picture class="food">
                         <img src="/images/hotpotudon.jpg" alt="udon">
                     </picture><br>
                     <!--Source: https://m.blog.naver.com/dongni660/222616764808-->
-                    Source: <cite class="pic-cite"> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
+                    <cite class="source"> <a href="https://m.blog.naver.com/dongni660/222616764808">udon</a></cite>
                 </li>
             </ul>
         </li>
