--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <h1>Home</h1>
 
-    <section class="darker-color">
+    <section class="bright-color">
     <h2>Welcome!</h2>
 
     <picture class="decorative">
@@ -85,17 +85,18 @@
     </div>
     </section>
 
-    <picture class="decorative">
-        <img src="images/mapofseoul.jpg" alt="overall map of seoul">
-    </picture>
-    <br>
+    <div class="maps">
+        <picture class="map">
+            <img src="images/mapofseoul.jpg" alt="overall map of seoul">
+        </picture>
+        <br>
+        <picture class="map">
+            <img src="/images/mapofseoul-smaller.jpg" alt="smaller map of seoul">
+        </picture>
+        <br>
+    </div>
     <!--Source: https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241-->
     <cite class="source"> <a href="https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241">seoul-map</a></cite>
-    <br>
-    <picture class="decorative">
-        <img src="/images/mapofseoul-smaller.jpg" alt="smaller map of seoul">
-    </picture>
-    <br>
     <!--Source: https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241-->
     <cite class="source"> <a href="https://www.shutterstock.com/image-vector/vector-map-seoul-south-korea-neighbouring-1626702241">smaller-seoul-map</a></cite>
 </body>
